# EnigmaMachine

./: README.md  Readme.md  compile.bash
Arduino/: CMakeLists.txt  board.h  rotor.h  screen.h  sketch.ino  utils.h
Server/: CMakeLists.txt  main.cpp
Server/www/: index.html
Test/: compile.sh  enigma.h  main.cpp
Wasm/: CMakeLists.txt  compile.sh  enigma.h  main.cpp
Wasm/www/: index.html
Wasm/www/wasm/: main.js  main.wasm
output/: index.html  main.css  main.js
view/: index.html  main.css  main.js
view/comp/: main.html  navbar.html
view/module/: Molly.js  UIkit.css  UIkit.js
www/: index.html  main.css  main.js
